# aec-suite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  LOG.md  MIGRATION_REPORT.md  Makefile  NEXT_STEPS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_contract_validation.py  test_cross_tenant_isolation.py  test_rbac_simple.py  turbo.json  validate_tracing.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
.openhands/: TASKS.md
.turbo/cache/: e29d3b72e57571f1-meta.json  e29d3b72e57571f1.tar.zst
.turbo/daemon/: ccde93a533ebdefc-turbo.log.2025-09-07
aec_suite.egg-info/: PKG-INFO  SOURCES.txt
agents/: design.py
apps/estatejoint/backend/: requirements.txt
apps/estatejoint/estatejoint_api/: .env  land_listings.db  sample_data.py
backend/: Dockerfile  app.py  pyproject.toml
backend/app/: api.py
backend/models/: __init__.py
backend/scrapers/: __init__.py  base_scraper.py
backend/src/backend/: models.py
backend/tests/: test_agent_workflow.py
db/migrations/: script.py.mako
db/migrations/versions/: 001_initial_tables.py
deploy/helm/erp-bridge/: Chart.yaml  values.yaml
docs/: GDPR.md
docs/adr/: 0001-monorepo-structure.md  0002-gateway-fastapi.md  0003-error-model-standardization.md  0004-multitenant-rbac-implementation.md
docs/api/: events.md
edge/drivers/hello-tractor/: Dockerfile  go.mod
estatejoint_api/: app.py
estatejoint_api/app/: __init__.py
estatejoint_api/scrapers/: ddproperty_scraper.py  thailand_property_scraper.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.js  index.css
frontend/src/__tests__/: ProjectView.test.tsx
frontend/src/pages/: ProjectView.tsx
libs/py/: setup.py
libs/py/aec_shared/: __init__.py  errors.py  events.py  models.py  otel.py  retry.py  settings.py
libs/py/aec_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libs/ts/aec-shared/: index.ts  schemas.ts  types.ts
schemas/asyncapi/: aec-events.yaml  aec-suite.yml  estimate-events.yaml
schemas/proto/: aec.proto
sdk/typescript/: package.json
services/aec-orchestrator/: .env.example  LICENSE  README.md
services/aec-orchestrator/agents/: bidding.py  compliance.py  coordinator.py  maintenance.py  schedule.py
services/aec-orchestrator/backend/: README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/aec-orchestrator/backend/.openhands/: TASKS.md
services/aec-orchestrator/backend/alembic/: env.py
services/aec-orchestrator/backend/alembic/versions/: 69f7ac79f32d_add_org_user_estimate_models.py
services/aec-orchestrator/backend/src/: app.py  models.py
services/aec-orchestrator/backend/src/backend/: models.py
services/aec-orchestrator/backend/src/backend/integrations/: erp.py
services/aec-orchestrator/backend/tests/: test_agent_workflow.py  test_auth_integration.py  test_auth_logic.py  test_auth_middleware.py  test_models.py
services/aec-orchestrator/demo/: RFP.txt  run_script.py  sample.ifc
services/aec-orchestrator/frontend/: index.html  package.json  tsconfig.json
services/aec-orchestrator/infra/: docker-compose.yml
services/api/: schemas.py
services/api/services/: rfp_service.py
services/billing/: Dockerfile
services/buildforge/: .env.example  README.md
services/buildforge-cloud/: LICENSE  Makefile
services/buildforge-cloud/.github/: PULL_REQUEST_TEMPLATE.md
services/buildforge-cloud/docs/: ARCHITECTURE.md  PILOT.md  SECURITY.md
services/buildforge/docs/: ISO-19650-CDE.md  ROADMAP.md
services/control-broker/: go.mod  main.go
services/erp-bridge/: Dockerfile  requirements.txt
services/gateway/: .env.example  __init__.py  db.py  main.py  package.json  pyproject.toml
services/gateway/.openhands/: TASKS.md
services/gateway/aec_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gateway/api/: dependencies.py
services/gateway/api/v1/: __init__.py  estimates.py  health.py  projects.py  rfps.py
services/gateway/core/: config.py  events.py  idempotency.py  security.py
services/gateway/core/middleware/: audit_logger.py  auth.py  error_handler.py  policy.py  rate_limit.py
services/gateway/migrations/: 001_initial_schema.py  002_rls_policies.py
services/gateway/models/: __init__.py  audit_log.py  estimate.py  project.py  rfp.py
services/gateway/services/: audit_service.py
services/gateway/src/: app.module.ts
services/gateway/src/erp/: erp.controller.ts
services/gateway/src/estate-joint/: estate-joint.controller.ts
services/gateway/src/health/: health.controller.ts
services/gateway/src/orchestrator/: orchestrator.controller.ts
services/gateway/src/rover/: rover.controller.ts
services/gateway/tests/: conftest.py  simple_test.py  test_estimates.py  test_health.py  test_nats_integration.py  test_projects.py  test_rbac_auth.py  test_rfps.py  test_simple_health.py  test_vertical_slice_contract.py
services/policy/: __init__.py
services/rover/: README.md  docker-compose.yml
services/rover-estimate/: main.py  requirements.txt
services/rover-operations/: CODEOWNERS  Makefile  SECURITY.md
services/rover/docs/: safety.md
sim/tractor-sim/: go.mod
tests/: test_seed.py
tools/: seed.py
web/console/: Dockerfile  tailwind.config.js
(+132 files in other folders)
