
[build-system]
requires = ["uv>=0.4.0"]
build-backend = "uv"

[project]
name = "aec-suite"
version = "0.0.0"
description = "AEC Suite Monorepo - Unified platform for AEC orchestration, rover operations, and ERP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LX Solutions", email = "engineering@lxsolutions.com"}
]

[tool.uv]
# Workspace configuration for Python packages
workspace = [
    {path = "services/buildforge"},
    {path = "services/orchestrator/backend"},
    {path = "services/rover/sdk/python"},
    {path = "services/rover/sim/tractor-sim"},
    {path = "apps/estatejoint/backend"},
    {path = "apps/estatejoint/estatejoint_api"},
    {path = "libs/py/**"},
]

[tool.uv.sync]
# Default sync settings for all workspace members
extra-index-urls = []
no-dev = false
upgrade = false

[tool.uv.lock]
# Lock file strategy
strategy = "cross-platform"

[tool.uv.tool]
# Tool configuration for the workspace
python = "3.12"
