
[build-system]
requires = ["uv>=0.4.0"]
build-backend = "uv"

[project]
name = "aec-suite"
version = "0.0.0"
description = "AEC Suite Monorepo - Unified platform for AEC orchestration, rover operations, and ERP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LX Solutions", email = "engineering@lxsolutions.com"}
]
