
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aec-suite"
version = "0.0.0"
description = "AEC Suite Monorepo - Unified platform for AEC orchestration, rover operations, and ERP integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "LX Solutions", email = "engineering@lxsolutions.com"}
]

[tool.setuptools]
packages = []

# [tool.uv]
# # Workspace configuration for Python packages
# workspace = [
#     "services/buildforge",
#     "services/orchestrator/backend",
#     "services/rover/sdk/python",
#     "services/rover/sim/tractor-sim",
#     "apps/estatejoint/backend",
#     "apps/estatejoint/estatejoint_api",
#     "libs/py/**",
# ]

# [tool.uv.tool]
# # Tool configuration for the workspace
# python = "3.12"
