
[project]
name = "aec-gateway"
version = "0.1.0"
description = "AEC Suite API Gateway"
authors = [
    { name = "AEC Suite Team", email = "team@aec-suite.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "opentelemetry-sdk>=1.19.0",
    "opentelemetry-exporter-jaeger>=1.19.0",
    "opentelemetry-instrumentation-fastapi>=0.11b0",
    "nats-py>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.8",
    "limits>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "core"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "httpx", "black", "ruff"]
