



[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = ">=1.6.2,<2.0.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.7"
pgvector = "^0.1.5"
openai = ">=1.40.0,<2.0.0"
ifcopenshell = "^0.7.0"
celery = "^5.3.6"
redis = "^4.6.0"
loguru = "^0.7.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiosqlite = "^0.21.0"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-isolation = true
# Add the following section for pytest configuration
[tool.pytest.ini_options]
testpaths = [
    "tests",
]


